--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,6 +1,7 @@
 usuarioDto.nome=Nome
 usuarioDto.email=E-mail
 
+mensagem.invalida=Mensagem inválida
 erro.desconhecido=Erro desconhecido
 recurso.nao-encontrado=Recurso não encontrado
 usuario.duplicado=Usuário já cadastrado
